Foi feio um reparo na página modo atendente e incluído uma nova funcionalidade onde será possível limpar as senhas salvas no banco de dados.

--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -65,10 +65,11 @@ th {
 	background: #221F2B;
 	width: 853px;
 	min-width: 300px;
-	height: 550px;
+	height: 480px;
 	float: right;
 	border: 3px solid green;
 	display: block;
+	padding-top: 70px;
 	
 }
 #tela_chamadas{
